[package]
name = "rcc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[[bin]]
name = "rcc"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
derive_more = { version = "0.99.17", default-features = false, features = ["display", "from", "is_variant"] }
memmap2 = "0.9.0"
nom = "7.1.3"
termion = "2.0.1"
